--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "mongodb": "^3.3.2",
