--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "mongodb": "^3.3.2",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -19,7 +20,7 @@
     "babel-polyfill": "^6.26.0"
   },
   "scripts": {
-    "start": "node start.js",
+    "start": "nodemon start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "srinu",
