--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fs-extra": "^7.0.1",
     "mongodb": "^3.3.2",
     "node-cron": "^2.0.3",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
