--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/polyfill": "^7.6.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "mongodb": "^3.3.2",
